# mwdc_ana

./: .gitignore  .kateproject  CMakeLists.txt  MWDC_mapping.xlsx  crate.json  decode.C  logbook.xlsx  mwdc_ana.sublime-project  mwdc_ana.sublime-workspace
docs/: 分析说明.docx  宇宙线测试操作说明.docx  宇宙线测试记录表.ods  宇宙线测试记录表.odt  操作说明.odt
docs/tex/: calibration.tex  detectors.tex  electronics.tex  main.tex  manual.sublime-project  report.tex  software.tex
docs/tex/fig/: interval_pdf_largerange.eps  interval_pdf_smallrange.eps  mwdc_bunchid_interval.eps  tof_bunchid_interval.eps  tof_interval.eps  tof_interval_correct_rollover.eps  tof_leadingtime_bunchid_diff.eps  tof_leadingtime_current_vs_previous.eps  tof_leadingtime_distribution.eps  tof_leadingtime_vs_bunchid.eps
eve/: CMakeLists.txt  MultiView.C  debug_eve.C  extract_geom.C  mwdc_cell.root  mwdc_extract_chamber.root  mwdc_extract_full.root  mwdc_extract_wire.root  mwdc_wire.root
eve/include/: EventDisplay.h  EventHandler.h  FitGUI.h  MultiView.h  eve_LinkDef.h
eve/src/: EventDisplay.cxx  FitGUI.cxx  MultiView.cxx
eve/test/: MultiView.C  fit_debug.cxx  main.cxx  mk_geom.C
kernel/: BoardInfo.h  BoardInfo_LinkDef.h  CMakeLists.txt  CrateInfo.h  CrateInfo_LinkDef.h  DriftInfo.cxx  DriftInfo.h  DriftInfo_LinkDef.h  GeometryInfo.cxx  GeometryInfo.h  GeometryInfo_LinkDef.h  TrackFit.h  global.h  global_LinkDef.h  utility.cxx  utility.h  utility_LinkDef.h
kernel/include/: BoardInfo.h  CrateInfo.h  DriftInfo.h  GeometryInfo.h  TrackFit.h  global.h  kernel_LinkDef.h  utility.h
kernel/src/: jsoncpp.cpp  utility.cxx
macros/: ana_attenuation.C  ana_batch.C  ana_dy58.C  ana_efficiency.C  ana_mips.C  ana_position_resolution.C  check_bunchid.C  check_correlation_maxtot.C  check_drift.C  check_eventid.C  check_maxtot.C  check_simulate_bunchid.C  check_starttime.C  check_triggermatching.C  check_triggermatching_single.C  compare_drift.C  debug_eve.C  debug_fit_rtrelation.C  debug_fit_track.C  debug_fitedge.C  debug_fitslice.C  debug_trackfit.C  debug_trackfit_perwire.C  debug_trackfit_test.C  draw_drift.C  draw_drifttime.C  draw_interval.C  draw_interval_raw.C  draw_multihit.C  draw_mwdctot.C  draw_noise.C  draw_tof.C  draw_trajectory.C  extrac.C  extract_event.C  extract_minrising_time.C  fit_drifttime_edge.C  init_check.C  process.C  rootlogon.C  (+1 more)
scripts/: CMakeLists.txt  maketemplate  rootlogon.C
